# PWConvert

./: .gitignore  README.md  convert.py  converters.yml  distribute.py  file.py  install.sh  pyproject.toml  scripts.md  scripts.yml  storage.py
src/pwconvert/: __init__.py  add_original_ext.py  application.yml  config.py  convert.py  converters.yml  copy_source_files.py  distribute.py  file.py  storage.py  util.py  validate.py
src/pwconvert/scripts/: dwg2dxf.py  dwg2pdf.py  dxf2pdf.py  extract_zip.py  office2pdf.py  pdf2pdfa.py
util/: util.py
